--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# SQLite database files
+*.db
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
@@ -205,3 +208,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
+.cursor/
