--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # --- Database ---
 # SQLite (default, local development)
-DATABASE_URL=sqlite:///./admin.db
+DATABASE_URL=sqlite:///./sqlite.db
 
 # MySQL
 # DATABASE_URL=mysql+pymysql://user:password@localhost:3306/admin_panel
